fixed missing day field in totalValues